--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Algebra Hub</title>
+  <title>CCHM Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body { font-family: Arial, sans-serif; background:#f0f4f8; margin:0; padding:2rem; text-align:center; }
@@ -15,18 +15,18 @@
   </style>
 </head>
 <body>
-  <h1>Algebra Hub</h1>
+  <h1>ACCHM Hub</h1>
 
-  <!-- Student Apps -->
-  <h2>Student Apps</h2>
+  <!-- Ephesians -->
+  <h2>Ephesians</h2>
   <div class="grid" id="studentGrid"></div>
 
-  <!-- Other Resources -->
-  <h2>Other Resources</h2>
+  <!-- Other Messages -->
+  <h2>Other Messages</h2>
   <div class="grid" id="hubGrid"></div>
 
   <script>
-    // ✅ Student-facing apps only
+    // ✅ Ephesians
     const students = [
       { file: "Exponent_Escape_Room.html", title: "Exponents Escape Room" },
       { file: "Inequality_Escape_Room.html", title: "Inequalities Escape Room" },
@@ -36,7 +36,7 @@
       { file: "boss_battle_multistep_equations.html", title: "Boss Battle: Multistep Equations" }
     ];
 
-    // 🌐 Hub links to other repos/sites
+    // 🌐 Hub links to other Messages
     const hubs = [
       { file: "https://iowoyemi-blip.github.io/retakes/", title: "Quiz Retakes Site" },
       { file: "https://iowoyemi-blip.github.io/honors_class_apps/", title: "Honors Class Apps" },
