--- a/index.html
+++ b/index.html
@@ -26,22 +26,14 @@
   <div class="grid" id="hubGrid"></div>
 
   <script>
-    // ✅ Ephesians
+    // ✅ Main Hub
     const students = [
-      { file: "Exponent_Escape_Room.html", title: "Exponents Escape Room" },
-      { file: "Inequality_Escape_Room.html", title: "Inequalities Escape Room" },
-      { file: "Literal_Equations_Escape_Room.html", title: "Literal Equations Escape Room" },
-      { file: "Square_Root_Operations_Escape_Room.html", title: "Square Root Operations Escape Room" },
-      { file: "Radical-H_Escape_Room.html", title: "Radical H Escape Room" },
-      { file: "boss_battle_multistep_equations.html", title: "Boss Battle: Multistep Equations" }
+      { file: "https://iowoyemi.github.io/Ephesians/", title: "The Book of Ephesians" }
+      { file: "https://iowoyemi.github.io/Other_Messages/", title: "Inequalities Escape Room" },
+     
     ];
 
-    // 🌐 Hub links to other Messages
-    const hubs = [
-      { file: "https://iowoyemi-blip.github.io/retakes/", title: "Quiz Retakes Site" },
-      { file: "https://iowoyemi-blip.github.io/honors_class_apps/", title: "Honors Class Apps" },
-      { file: "https://iowoyemi-blip.github.io/Study_Guides/", title: "Study Guides Site" }
-    ];
+   
 
     function render(list, targetId){
       const grid = document.getElementById(targetId);
