--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <script>
     // ✅ Main Hub
     const students = [
-      { file: "https://iowoyemi.github.io/Ephesians/", title: "The Book of Ephesians" }
-      { file: "https://iowoyemi.github.io/Other_Messages/", title: "Inequalities Escape Room" },
+      { file: "https://iowoyemi.github.io/Ephesians/", title: "The Book of Ephesians" },
+      { file: "https://iowoyemi.github.io/Other_Messages/", title: "Inequalities Escape Room" }
      
     ];
 
