--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   </style>
 </head>
 <body>
-  <h1>Algebra Hub</h1>
+  <h1>CCHM Messages Hub</h1>
 
-  <!-- Student Apps -->
-  <h2>Student Apps</h2>
+  <!-- Bible Books -->
+  <h2>Bible Books</h2>
   <div class="grid" id="studentGrid"></div>
 
-  <!-- Other Resources -->
+  <!-- Other Messages -->
   <h2>Other Resources</h2>
   <div class="grid" id="hubGrid"></div>
 
