--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="grid" id="studentGrid"></div>
 
   <!-- Other Messages -->
-  <h2>Other Resources</h2>
+  <h2>Other Messages</h2>
   <div class="grid" id="hubGrid"></div>
 
   <script>
