--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
   <div class="grid" id="hubGrid"></div>
 
   <script>
-    // ✅ Student-facing apps only
+    // ✅ Bible Books only
     const students = [
-      { file: "Exponent_Escape_Room.html", title: "Exponents Escape Room" },
-      { file: "Inequality_Escape_Room.html", title: "Inequalities Escape Room" },
-      { file: "Literal_Equations_Escape_Room.html", title: "Literal Equations Escape Room" },
-      { file: "Square_Root_Operations_Escape_Room.html", title: "Square Root Operations Escape Room" },
-      { file: "Radical-H_Escape_Room.html", title: "Radical H Escape Room" },
-      { file: "boss_battle_multistep_equations.html", title: "Boss Battle: Multistep Equations" }
+      { file: "Exponent_Escape_Room.html", title: "1 John" },
+      { file: "Inequality_Escape_Room.html", title: "2 John" },
+      { file: "Literal_Equations_Escape_Room.html", title: "3 John" },
+      { file: "Square_Root_Operations_Escape_Room.html", title: "Ephesians" },
+      { file: "Radical-H_Escape_Room.html", title: "Revelations" },
+      { file: "boss_battle_multistep_equations.html", title: "James" }
     ];
 
-    // 🌐 Hub links to other repos/sites
+    // 🌐 Hub links to Messages
     const hubs = [
-      { file: "https://iowoyemi-blip.github.io/retakes/", title: "Quiz Retakes Site" },
-      { file: "https://iowoyemi-blip.github.io/honors_class_apps/", title: "Honors Class Apps" },
-      { file: "https://iowoyemi-blip.github.io/Study_Guides/", title: "Study Guides Site" }
+      { file: "https://iowoyemi-blip.github.io/retakes/", title: "2024" },
+      { file: "https://iowoyemi-blip.github.io/honors_class_apps/", title: "2025" },
+      { file: "https://iowoyemi-blip.github.io/Study_Guides/", title: "2026" }
     ];
 
     function render(list, targetId){
