--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Algebra Hub</title>
+  <title>CCHM Messages Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body { font-family: Arial, sans-serif; background:#f0f4f8; margin:0; padding:2rem; text-align:center; }
@@ -28,19 +28,19 @@
   <script>
     // ✅ Bible Books only
     const students = [
-      { file: "Exponent_Escape_Room.html", title: "1 John" },
-      { file: "Inequality_Escape_Room.html", title: "2 John" },
-      { file: "Literal_Equations_Escape_Room.html", title: "3 John" },
-      { file: "Square_Root_Operations_Escape_Room.html", title: "Ephesians" },
-      { file: "Radical-H_Escape_Room.html", title: "Revelations" },
-      { file: "boss_battle_multistep_equations.html", title: "James" }
+      { file: "https://iowoyemi.github.io/1_john/", title: "1 John" },
+      { file: "https://iowoyemi.github.io/2_john/", title: "2 John" },
+      { file: "https://iowoyemi.github.io/3_john/", title: "3 John" },
+      { file: "https://iowoyemi.github.io/Ephesians/", title: "Ephesians" },
+      { file: "https://iowoyemi.github.io/Revelations/", title: "Revelations" },
+      { file: "https://iowoyemi.github.io/James/", title: "James" }
     ];
 
     // 🌐 Hub links to Messages
     const hubs = [
-      { file: "https://iowoyemi-blip.github.io/retakes/", title: "2024" },
-      { file: "https://iowoyemi-blip.github.io/honors_class_apps/", title: "2025" },
-      { file: "https://iowoyemi-blip.github.io/Study_Guides/", title: "2026" }
+      { file: "https://iowoyemi.github.io/2024/", title: "2024" },
+      { file: "https://iowoyemi.github.io/2025/", title: "2025" },
+      { file: "https://iowoyemi.github.io/2026/", title: "2026" }
     ];
 
     function render(list, targetId){
